--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,41 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>clojars</id>
+            <url>https://clojars.org/repo</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <!-- Libreria per analizzare file audio -->
+        <dependency>
+            <groupId>net.beadsproject</groupId>
+            <artifactId>beads</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+        <!-- Libreria per decodificare file MP3 -->
+        <dependency>
+            <groupId>javazoom</groupId>
+            <artifactId>jlayer</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <!-- JavaFX per la visualizzazione -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>22.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>22.0.2</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
